--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@types/node": "^18.7.18",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "puppeteer": "^18.0.5"
   }
 }
