added github command

--- a/cli-config.json
+++ b/cli-config.json
@@ -1,3 +1,4 @@
 {
-  "browserPath": "/Applications/Google Chrome Canary.app"
+  "browserPath": "/Applications/Google Chrome Canary.app",
+  "githubHandle": "WVAviator"
 }
