--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "wvaviator",
   "license": "MIT",
   "devDependencies": {
+    "@types/inquirer": "^9.0.1",
     "@types/node": "^18.7.18",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "inquirer": "^8.0.0",
+    "macos-audio-devices": "^1.4.0",
     "puppeteer": "^18.0.5"
   }
 }
