--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.1",
     "@types/node": "^18.7.18",
+    "@types/puppeteer": "^5.4.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
