--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-    "lib": ["es2015"],
+    "lib": ["es2015", "DOM"],
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "bin",
