--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "active-win": "^7.7.2",
     "inquirer": "^8.0.0",
     "macos-audio-devices": "^1.4.0",
-    "puppeteer": "^18.0.5"
+    "puppeteer": "^18.0.5",
+    "window-control": "^1.4.4"
   }
 }
